This reverts commit 1e44bcea974525ca4fdcbf9a83da57909aae7840.

--- a/templates/write.html
+++ b/templates/write.html
@@ -1,33 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Post</title>
-      <link href="../static/styles.css" rel="stylesheet" type="text/css" />
-      <link href="../static/write.css" rel="stylesheet" type="text/css" />
-      <link href="../static/simplemde.min.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-
-    <div class="navbar">
-        <div>Home | TIL | Leaderboard</div>
-        <div>My</div>
-    </div>
-
-    <div class="form_container">
-      <textarea class="form-control" name="content" id="content" rows="10">{{ '' }}</textarea>
-    </div>
-
-    <footer>
-        Team CSI
-        <br>github: xxxxx
-        <br>notion: xxxxx
-    </footer>
-
-    <script src="{{ url_for('static', filename='simplemde.min.js') }}"></script>
-    <script>
-            var mde = new SimpleMDE({ element: document.getElementById("content") });
-    </script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
 </html>
