--- a/templates/main.html
+++ b/templates/main.html
@@ -1,37 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Main</title>
-      <link href="../static/styles.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
 
-    <div class="navbar">
-        <div>Home | TIL | Leaderboard</div>
-        <div>My</div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Main</title>
+  <link href="../static/styles.css" rel="stylesheet" type="text/css" />
+  <link href="../static/main.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+
+  <div class="navbar">
+    <div class="left">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/til_list">TIL</a></li>
+        <li><a href="/leaderboard">Leaderboard</a></li>
+      </ul>
     </div>
+    <div class="right">
+      <ul>
+        <li><a href="#">My</a>
+          <ul class="dropdown">
+            <li><a href="/my_page">내 정보</a></li>
+            <li><a href="/til_list['user_id']">내 TIL</a></li>
+            <li><a href="/write">글 작성</a></li>
+            <li><a href="/logout">로그아웃</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
 
-    <div class="container">
-        <h2>Today's TIL List</h2>
-        <div class="card-container">
-            {% for today_til in data['today_til'] %}
-            <a href="post/{{ today_til['id'] }}" class="card" style="text-decoration: none;">
-              <h3>{{ today_til['title'] }}</h3>
-              <img src="{{ today_til['thumbnail'] }}" alt="Thumbnail">
-              <p>Likes: {{ today_til['like_cnt'] }}</p>
-              <p>Posted by: {{ today_til['user_id'] }} on {{ today_til['reg_date'] }}</p>
-            </a>
-            {% endfor %}
+  <!-- ---------------------------------------------------------------------------------------- -->
+
+  <div class="container">
+    <h2>Today's TIL List</h2>
+    <div class="card-container">
+      {% for today_til in data['today_til'] %}
+      <div class="til_card">
+        <div class="front" style="background-image: url('');">
+          <!-- 앞면 내용 -->
+          <h3>{{ today_til['title'] }}</h3>
         </div>
+        <div class="back">
+          <!-- 뒷면 내용 -->
+          <p>{{ today_til['contents'] }}</p>
+          <p>Likes: {{ today_til['like_cnt'] }}</p>
+          <p>Posted by: {{ today_til['user_id'] }} on {{ today_til['reg_date'] }}</p>
+          <br><a href="post/{{ today_til['id'] }}">TIL 보러가기</a>
+        </div>
+      </div>
+      {% endfor %}
     </div>
+  </div>
 
-    <footer>
-        Team CSI
-        <br>github: xxxxx
-        <br>notion: xxxxx
-    </footer>
+  <!-- ---------------------------------------------------------------------------------------- -->
 
-  </body>
+  <footer>
+    Team CSI
+    <a href="https://github.com/luna-negra/csi_group_project/tree/main" target="_blank">github</a>
+    <a href="https://teamsparta.notion.site/1-CSI-6f9c97ddc53348598f701eb6f7796eb3" target="_blank">notion</a>
+  </footer>
+
+</body>
+
 </html>
