--- a/templates/post.html
+++ b/templates/post.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Post</title>
-      <link href="../static/styles.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
 
-    <div class="navbar">
-        <div>Home | TIL | Leaderboard</div>
-        <div>My</div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Post</title>
+  <link href="../static/styles.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+
+  <div class="navbar">
+    <div class="left">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/til_list">TIL</a></li>
+        <li><a href="/leaderboard">Leaderboard</a></li>
+      </ul>
     </div>
-    <div class="container">
-      <div class="post-container">
-          <div class="post-title">{{ data['post'][0]['title'] }}</div>
-          <div class="post-meta">
-              Posted by {{ data['post'][0]['user_id'] }} on {{ data['post'][0]['reg_date'] }}
-          </div>
-          <div class="post-contents">
-              {{ data['post'][0]['contents'] }}
-          </div>
-          <div class="like-count">
-              좋아요 {{ data['post'][0]['like_cnt'] }} 개
-          </div>
-          <div class="comments">
-              {% if data['comments'][0] == None %}
-                댓글이 없습니다.
-              {% else %}
-                {{ data['comments'][0]['user_id'] }} - {{ data['comments'][0]['contents'] }}
-              {% endif %}
-          </div>
+    <div class="right">
+      <ul>
+        <li><a href="#">My</a>
+          <ul class="dropdown">
+            <li><a href="/my_page">내 정보</a></li>
+            <li><a href="/til_list['user_id']">내 TIL</a></li>
+            <li><a href="/write">글 작성</a></li>
+            <li><a href="/logout">로그아웃</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- ---------------------------------------------------------------------------------------- -->
+
+  <div class="container">
+    <div class="post-container">
+      <div class="post-title">{{ data['post'][0]['title'] }}</div>
+      <div class="post-meta">
+        Posted by {{ data['post'][0]['user_id'] }} on {{ data['post'][0]['reg_date'] }}
+      </div>
+      <div class="post-contents">
+        {{ data['post'][0]['contents'] }}
+      </div>
+      <div class="like-count">
+        좋아요 {{ data['post'][0]['like_cnt'] }} 개
+      </div>
+      <div class="comments">
+        {% if data['comments'][0] == None %}
+        댓글이 없습니다.
+        {% else %}
+        {{ data['comments'][0]['user_id'] }} - {{ data['comments'][0]['contents'] }}
+        {% endif %}
       </div>
     </div>
+  </div>
 
-    <footer>
-        Team CSI
-        <br>github: xxxxx
-        <br>notion: xxxxx
-    </footer>
-  </body>
+  <!-- ---------------------------------------------------------------------------------------- -->
+
+  <footer>
+    Team CSI
+    <a href="https://github.com/luna-negra/csi_group_project/tree/main" target="_blank">github</a>
+    <a href="https://teamsparta.notion.site/1-CSI-6f9c97ddc53348598f701eb6f7796eb3" target="_blank">notion</a>
+  </footer>
+</body>
+
 </html>
