create : til_list html & py TIL_list html 작성 및 파이썬 코드 작성

--- a/templates/til_list.html
+++ b/templates/til_list.html
@@ -3,9 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>TIL_List</title>
+  <link href="../static/til_list_style.css" rel = "stylesheet" type="text/css" />
 </head>
-<body>
+  <body>
   
-</body>
+    <div class="navbar">
+        <div>Home | TIL | Leaderboard</div>
+        <div>My</div>
+    </div>    
+    
+    <div class="search">
+      <input type="text" class="til_search">
+      <button type="submit">검색
+      </button>
+    </div>
+    
+    <div class ="body"></div>
+    <footer>
+      Team CSI
+      <br>github: xxxxx
+      <br>notion: xxxxx
+  </footer>
+
+  </body>
+
 </html>
