UPDATE : 전체 코드 리팩토링
css 파일을 다 나눠놓고 HTML의 가이드를 지정했습니다.

--- a/templates/post.html
+++ b/templates/post.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Post</title>
   <link href="../static/styles.css" rel="stylesheet" type="text/css" />
+  <link href="../static/post.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -57,7 +58,7 @@
   </div>
 
   <!-- ---------------------------------------------------------------------------------------- -->
-
+  
   <footer>
     Team CSI
     <a href="https://github.com/luna-negra/csi_group_project/tree/main" target="_blank">github</a>
