--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -6,15 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Post</title>
   <link href="../static/styles.css" rel="stylesheet" type="text/css" />
+  <link href="../static/leaderboard.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
   <div class="navbar">
-    <div>Home | TIL | Leaderboard</div>
-    <div>My</div>
+    <div class="left">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/til_list">TIL</a></li>
+        <li><a href="/leaderboard">Leaderboard</a></li>
+      </ul>
+    </div>
+    <div class="right">
+      <ul>
+        <li><a href="#">My</a>
+          <ul class="dropdown">
+            <li><a href="/my_page">내 정보</a></li>
+            <li><a href="/til_list['user_id']">내 TIL</a></li>
+            <li><a href="/write">글 작성</a></li>
+            <li><a href="/logout">로그아웃</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
   </div>
-
+  <!-- ---------------------------------------------------------------------------------------- -->
   <div class="leader-list">
     <h2>Leaderboard</h2>
     <div class="leaderboard">
@@ -25,12 +43,11 @@
       {% endfor %}
     </div>
   </div>
-
-
+  <!-- ---------------------------------------------------------------------------------------- -->
   <footer>
     Team CSI
-    <br>github: xxxxx
-    <br>notion: xxxxx
+    <a href="https://github.com/luna-negra/csi_group_project/tree/main" target="_blank">github</a>
+    <a href="https://teamsparta.notion.site/1-CSI-6f9c97ddc53348598f701eb6f7796eb3" target="_blank">notion</a>
   </footer>
 </body>
 
