--- a/templates/my_page.html
+++ b/templates/my_page.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Main</title>
+  <link href="../static/styles.css" rel="stylesheet" type="text/css" />
+  <link href="../static/my_page.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-  
+
+  <div class="navbar">
+    <div class="left">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/til_list">TIL</a></li>
+        <li><a href="/leaderboard">Leaderboard</a></li>
+      </ul>
+    </div>
+    <div class="right">
+      <ul>
+        <li><a href="#">My</a>
+          <ul class="dropdown">
+            <li><a href="/my_page">내 정보</a></li>
+            <li><a href="/til_list['user_id']">내 TIL</a></li>
+            <li><a href="/write">글 작성</a></li>
+            <li><a href="/logout">로그아웃</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- ---------------------------------------------------------------------------------------- -->
+
+  <!-- ---------------------------------------------------------------------------------------- -->
+
+  <footer>
+    Team CSI
+    <a href="https://github.com/luna-negra/csi_group_project/tree/main" target="_blank">github</a>
+    <a href="https://teamsparta.notion.site/1-CSI-6f9c97ddc53348598f701eb6f7796eb3" target="_blank">notion</a>
+  </footer>
+
 </body>
 </html>
