--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,4 @@
+@import url("color.css");
 .til_card {
     perspective: 1000px;
 }
@@ -18,22 +19,23 @@
 }
 
 .til_card>.front {
-    background: white;
+    background: var(--normal-color);
 }
 
 .til_card>.back {
-    background: white;
+    background: var(--normal-color);
     transform: rotateY(180deg);
 }
 
 .til_card>.back>a {
     font-size: 20px;
-    color: black;
+    color: var(--accent-color);
 }
 
 .til_card>.back>a:hover {
     border-radius: 5px;
-    background-color: lightblue;
+    color: var(--normal-color);
+    background-color: var(--accent-color);
 }
 
 .til_card:hover>.front {
@@ -42,4 +44,74 @@
 
 .til_card:hover>.back {
     transform: rotateY(0deg);
+}
+
+.card {
+    background-color: var(--normal-color);
+    color: var(--accent-color);
+    padding: 20px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px var(--accent-color);
+}
+
+.card h3 {
+    margin-top: 0;
+}
+
+.card img {
+    max-width: 100%;
+    margin-bottom: 10px;
+}
+
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 20px;
+}
+
+.post-container {
+    background-color: var(--normal-color);
+    width: 100%;
+    height: 100%;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px var(--accent-color);
+}
+
+.post-contents {
+    margin-bottom: 20px;
+}
+
+.post-title {
+    font-size: 24px;
+    margin-bottom: 8px;
+}
+
+.post-meta {
+    margin-bottom: 16px;
+    color: var(--middle-color);
+    font-size: 14px;
+}
+
+.post-contents {
+    margin-bottom: 20px;
+}
+
+.like-count {
+    font-size: 14px;
+    margin-bottom: 8px;
+}
+
+.comments {
+    background: var(--normal-color);
+    padding: 10px;
+    margin: 10px 0;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 20px;
 }
