--- a/static/leaderboard.css
+++ b/static/leaderboard.css
@@ -4,12 +4,12 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #afafaf;
+    background-color: var(--middle-color);
 }
 
 .navbar {
-    background-color: #333;
-    color: white;
+    background-color: var(--accent-color);
+    color: var(--normal-color);
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
@@ -20,8 +20,8 @@ body {
     padding: 20px;
 }
 footer {
-    background-color: #333;
-    color: white;
+    background-color: var(--accent-color);
+    color: var(--normal-color);
     text-align: center;
     padding: 10px 20px;
     position: absolute;
