--- a/templates/write.html
+++ b/templates/write.html
@@ -34,7 +34,14 @@
   </div>
 
   <!-- ---------------------------------------------------------------------------------------- -->
-
+  <form action="/create_post" method="POST" class="form_container" >
+    <input class="title_inp" type="text" placeholder="제목을 입력하세요">
+    <textarea class="form-control" name="content" id="content" rows="10">{{ '' }}</textarea>
+    <div class="btn_container">
+      <button type="submit" class="post_btn">TIL 등록</button>
+      <button class="exit_btn">나가기</button>
+    </div>
+  </form>
   <!-- ---------------------------------------------------------------------------------------- -->
 
   <footer>
@@ -43,5 +50,9 @@
     <a href="https://teamsparta.notion.site/1-CSI-6f9c97ddc53348598f701eb6f7796eb3" target="_blank">notion</a>
   </footer>
 
+  <script src="{{ url_for('static', filename='simplemde.min.js') }}"></script>
+  <script>
+    var mde = new SimpleMDE({ element: document.getElementById("content") });
+  </script>
 </body>
 </html>
