CREATE : 회원가입 기능 추가
회원가입 기능 코드를 추가했습니다.
비밀번호 해시 기능은 일단 보류했습니다.
register.html 디자인을 완성할 필요가 있습니다.

--- a/static/register.css
+++ b/static/register.css
@@ -1,1 +1,17 @@
 @import url("color.css");
+
+.register_form{
+    background-color: var(--normal-color);
+    height: 50%;
+    margin: 20%;
+}
+
+.inp_container{
+    margin: 10%;
+}
+
+.btn_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
