--- a/static/til_list.css
+++ b/static/til_list.css
@@ -1,1 +1,31 @@
 @import url("color.css");
+@import url("styles.css");
+
+.search_box {
+    display: flex;
+    justify-content: center;
+    height: 50px;
+    margin: 20px;
+    width: 100%;
+}
+
+.submit_btn {
+    width: 100px;
+    color: var(--accent-color);
+    background-color: var(--middle-color);
+    font-size: 15px;
+}
+
+.til_lists {
+    justify-content: center;
+    width: 200px;
+    height: 250px;
+    border-radius: 10px;
+    text-align: center;
+    align-items: center;
+    background-color: var(--normal-color);
+    color: var(--accent-color);
+    padding: 20px;
+    margin: 20px;
+
+}
