--- a/templates/til_list.html
+++ b/templates/til_list.html
@@ -31,13 +31,19 @@
       </div>
     </div>
     <!-- ---------------------------------------------------------------------------------------- -->
-    <div class="search">
-      <input type="text" class="til_search">
-      <button type="submit">검색
-      </button>
+    <div class="search_box">
+        <input type="text" >
+        <button type="submit" class="submit_btn">Search</button>
+    </div>
+    <div class="til_lists">
+      {% for til in data['lists'] %}
+      <div class="til_box">
+        <p>{{ til['thumbnail'] }}</p> 
+        <br><a href="post/{{ til['title'] }}">{{ til['title'] }}</a> 
+      </div>
+      {% endfor %}
     </div>
     
-    <div class ="body"></div>
     <!-- ---------------------------------------------------------------------------------------- -->
     <footer>
       Team CSI
