--- a/templates/til_list.html
+++ b/templates/til_list.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TIL_List</title>
-  <link href="../static/til_list_style.css" rel = "stylesheet" type="text/css" />
+  <link href="../static/styles.css" rel = "stylesheet" type="text/css" />
   <link href="../static/til_list.css" rel="stylesheet" type="text/css" />
 </head>
   <body>
