UPDATE: feature/fb_login
2024.04.02 21:30
1. 로그인 기능 구현
-  DB 계정 정보에 따른 로그인 기능 구현
- 실패 시, login 창에 머무름
- 성공 시 메인 화면으로 이동 (세션 구현 필요)
- 계정 입력 정보 전달 시 비밀번호를 js단에서 sha256으로 암호화

2. Signup 페이지 연결 완료

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,9 +8,13 @@
   <link href="../static/styles.css" rel="stylesheet" type="text/css" />
   <link href="../static/login.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-
+  <script src="../static/sha256.js"></script>
+  {% if error_message %}
+      <script>
+          alert('{{ error_message }}');
+      </script>
+  {% endif %}
   <div class="navbar">
     <div class="left">
       <ul>
@@ -34,7 +38,31 @@
   </div>
 
   <!-- ---------------------------------------------------------------------------------------- -->
+<div id=center>
+    <div class="intro_title">
+      <span class="introText">TIL 게시판</span></div>
+    <div class="intro_title"><span class="introText">Log In</span></div>
 
+    <div class="loginForm">
+      <form action="/login" method="POST" id="myForm">
+        <div class="loginInput">
+          <input type="text" name="username" id="username" class="loginInput" placeholder="username">
+        </div>
+        <div class="loginInput">
+          <input type="password" name="password" id="password" class="loginInput" placeholder="password">
+        </div>
+        <div class="loginInput">
+          <button onclick="convert_pw()" class="btn"><span class="btnText">Sign In</span></button>
+        </div>
+      </form>
+      <hr>
+      <div class="signUp">
+        <form action="/register" method="GET">
+          <button type="submit" class="btnSignup"><span class="btnSignupText">Want to join us? Sign up</span></button>
+        </form>
+      </div>
+    </div>
+  </div>
   <!-- ---------------------------------------------------------------------------------------- -->
 
   <footer>
