--- a/static/leaderboard.css
+++ b/static/leaderboard.css
@@ -1,30 +1,20 @@
 @import url("color.css");
-body {
-    font-family: Arial, sans-serif;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: var(--middle-color);
-}
-
-.navbar {
-    background-color: var(--accent-color);
-    color: var(--normal-color);
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-}
 .leader-list {
     max-width: 1200px;
     margin: 20px auto;
     padding: 20px;
 }
-footer {
-    background-color: var(--accent-color);
-    color: var(--normal-color);
-    text-align: center;
-    padding: 10px 20px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+
+.leaderboard {
+    background-color: var(--normal-color);
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    padding: 20px;
+    text-align: left;
+}
+.rank-item {
+    margin-bottom: 10px;
+    padding: 20px;
+    border-bottom: 1px solid #ccc;
+    text-align: left;
 }
