update : pagination 코드 작성 pagination 코드 작성은 하였으나, 정상적으로 작동하지 않아 코드 수정이 필요합니다.

--- a/static/til_list.css
+++ b/static/til_list.css
@@ -7,6 +7,9 @@
     margin: 20px;
     width: 100%;
 }
+.input_box {
+    width: 500px;
+}
 
 .submit_btn {
     width: 100px;
@@ -17,6 +20,8 @@
 
 .til_lists {
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .til_box {
