UPDATE: feature/fb_mypage
1. 마이페이지 구현 완료
(1  로그인 세션 계정에 대한 정보 표시
-  세션이 없는 경우 로그인 창으로 이동
(2) 로그인 세션 계정에 대한 비밀번호 변경
- 비밀번호 규칙은 register()의 규칙과 동일하게 작성
- 변경 비밀번호는 이전 비밀번호와 동일하면 변경 불가
- 변경 비밀번호와 재입력 비밀번호 불일치 시 변경 불가
- 이전 비밀번호 불일치 시 변경 불가
- 비밀번호 변경 후 Alert로 사용자에게 변경 알림.

2. 회원 탈퇴
- 로그인 세션 계정과 일치하는 비밀번호 입력 시 회원 탈퇴 진행
- 비밀번호 불일치 시 회원 탈퇴 불가
- 회원 탈퇴 시 Members.is_deleted값이 1로 업데이트되며 향후 로그인 불가

3. 로그인 함수 수정
- is_deleted 값 참조하도록 쿼리 수정.

끝.

--- a/static/my_page.css
+++ b/static/my_page.css
@@ -55,16 +55,38 @@ th, td {
     text-align: left;
 }
 
-th {
+th.key {
     border-right: solid;
     border-color: var(--table-intbrd-color);
 
     width: 200px;
 }
 
-td {
+td.pwKey {
+    width: 150px;
+}
+
+tr.pwVal {
+    width: 200px
+}
+
+td.value {
     padding-left: 20px;
     width: 400px
+}
+
+button.btnInner {
+    background-color: var(--normal-color);
+    border-color: var(--accent-color);
+    border-radius: 5px;
+    margin-right: 10px;
+
+    height: 30px;
+}
+
+button#memOutHTMLChange{
+    color: red;
+    font-weight: 900;
 }
 
 span.pageTitle{
@@ -72,3 +94,10 @@ span.pageTitle{
     font-weight: 1000;
 }
 
+span.smlTxt{
+    font-size: 10pt;
+}
+
+span.red {
+    color: red;
+}
