--- a/static/leaderboard.css
+++ b/static/leaderboard.css
@@ -18,3 +18,28 @@
     border-bottom: 1px solid #ccc;
     text-align: left;
 }
+.pagination {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+.pagination li {
+    margin-right: 5px;
+}
+.pagination li a, .pagination li span {
+    display: inline-block;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    color: #333;
+    text-decoration: none;
+}
+.pagination li.active span {
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
+}
+.pagination li a:hover {
+    background-color: #f0f0f0;
+}
