--- a/static/main.css
+++ b/static/main.css
@@ -2,18 +2,24 @@
 
 .til_card {
     perspective: 1000px;
+    width: 300px;
+    height: 350px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 1s ease;
 }
 
 .til_card>.front,
 .til_card>.back {
-    width: 300px;
-    height: 350px;
+    will-change: transform, opacity;
+    transform: translateZ(0);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
     background-size: cover !important;
     background-position: center !important;
     border-radius: 10px;
-    transition: transform 0.5s, opacity 0.5s;
-    backface-visibility: hidden;
-    position: absolute;
+    transition: transform 0.6s, opacity 1s;
     top: 0;
     text-align: center;
     align-content: center;
@@ -21,6 +27,11 @@
 
 .til_card>.front {
     background: var(--normal-color);
+}
+
+.thumbnail {
+    width: 200px;
+    height: 200px;
 }
 
 .til_card>.back {
@@ -37,6 +48,10 @@
     border-radius: 5px;
     color: var(--normal-color);
     background-color: var(--accent-color);
+}
+
+.til_card:hover {
+    box-shadow: none;
 }
 
 .til_card:hover>.front {
