--- a/static/styles.css
+++ b/static/styles.css
@@ -1,11 +1,21 @@
 @import url("color.css");
 
+@font-face {
+    font-family: 'KCC-Hanbit';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/2403-2@1.0/KCC-Hanbit.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+html {
+    background-image: linear-gradient(to right, #d3cce3, #e9e4f0);
+}
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'KCC-Hanbit';
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: var(--middle-color);
 }
 
 .navbar {
@@ -14,6 +24,7 @@ body {
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 footer {
@@ -26,8 +37,14 @@ footer {
     width: 100%;
 }
 
+footer>a>img {
+    width: 15px;
+    height: 15px;
+}
+
 footer>a {
-    width: 50px;
+    width: 80px;
+    text-align: center;
 }
 
 /* nav바 스타일 입니다 */
