--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,8 @@
+{% if error_message %}
+<script>
+  alert('{{ error_message }}');
+</script>
+{% endif %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,13 +13,9 @@
   <link href="../static/styles.css" rel="stylesheet" type="text/css" />
   <link href="../static/login.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
   <script src="../static/login.js"></script>
-  {% if error_message %}
-      <script>
-          alert('{{ error_message }}');
-      </script>
-  {% endif %}
   <div class="navbar">
     <div class="left">
       <ul>
@@ -38,9 +39,10 @@
   </div>
 
   <!-- ---------------------------------------------------------------------------------------- -->
-<div id=center>
+  <div id=center>
     <div class="intro_title">
-      <span class="introText">TIL 게시판</span></div>
+      <span class="introText">TIL 게시판</span>
+    </div>
     <div class="intro_title"><span class="introText">Log In</span></div>
 
     <div class="loginForm">
@@ -67,9 +69,16 @@
 
   <footer>
     Team CSI
-    <a href="https://github.com/luna-negra/csi_group_project/tree/main" target="_blank">github</a>
-    <a href="https://teamsparta.notion.site/1-CSI-6f9c97ddc53348598f701eb6f7796eb3" target="_blank">notion</a>
+
+    <a href="https://github.com/luna-negra/csi_group_project/tree/main" target="_blank">
+      <img src="{{ url_for('static', filename='image/github-logo.png') }}"> Github
+    </a>
+    <a href="https://teamsparta.notion.site/1-CSI-6f9c97ddc53348598f701eb6f7796eb3" target="_blank"
+      rel="noopener noreferrer">
+      <img src="{{ url_for('static', filename='image/notion-logo.png') }}"> Notion
+    </a>
   </footer>
 
 </body>
+
 </html>
