--- a/templates/write.html
+++ b/templates/write.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+  <script src="../static/write.js"></script>
   <div class="navbar">
     <div class="left">
       <ul>
@@ -34,8 +34,8 @@
   </div>
 
   <!-- ---------------------------------------------------------------------------------------- -->
-  <form action="/create_post" method="POST" class="form_container" >
-    <input class="title_inp" type="text" placeholder="제목을 입력하세요">
+  <form action="write" method="POST" class="form_container">
+    <input class="title_inp" name="title" id="title" type="text" placeholder="제목을 입력하세요">
     <textarea class="form-control" name="content" id="content" rows="10">{{ '' }}</textarea>
     <div class="btn_container">
       <button type="submit" class="post_btn">TIL 등록</button>
@@ -46,8 +46,14 @@
 
   <footer>
     Team CSI
-    <a href="https://github.com/luna-negra/csi_group_project/tree/main" target="_blank">github</a>
-    <a href="https://teamsparta.notion.site/1-CSI-6f9c97ddc53348598f701eb6f7796eb3" target="_blank">notion</a>
+
+    <a href="https://github.com/luna-negra/csi_group_project/tree/main" target="_blank">
+      <img src="{{ url_for('static', filename='image/github-logo.png') }}"> Github
+    </a>
+    <a href="https://teamsparta.notion.site/1-CSI-6f9c97ddc53348598f701eb6f7796eb3" target="_blank"
+      rel="noopener noreferrer">
+      <img src="{{ url_for('static', filename='image/notion-logo.png') }}"> Notion
+    </a>
   </footer>
 
   <script src="{{ url_for('static', filename='simplemde.min.js') }}"></script>
@@ -55,4 +61,5 @@
     var mde = new SimpleMDE({ element: document.getElementById("content") });
   </script>
 </body>
+
 </html>
