--- a/static/til_list.css
+++ b/static/til_list.css
@@ -26,18 +26,39 @@
 
 .til_box {
     justify-content: center;
-    width: 20%;
+    width: 15%;
     height: 250px;
     border-radius: 10px;
     text-align: center;
     align-items: center;
     background-color: var(--normal-color);
     color: var(--accent-color);
-    padding: 20px;
+    padding: 50px;
     margin: 20px;
-
 }
 
 .page_num {
-    color: var(--accent-color);
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+.page_num li {
+    margin-right: 5px;
+}
+.page_num li a, .page_num li span {
+    display: inline-block;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    color: #333;
+    text-decoration: none;
+}
+.page_numn li.active span {
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
+}
+.page_num li a:hover {
+    background-color: #f0f0f0;
 }
