--- a/templates/til_list.html
+++ b/templates/til_list.html
@@ -47,7 +47,25 @@
   </div>
 
     <div class="page_num">
-      {{ pagination.links | safe }}
+      {% if pagination.page >1 %}
+          <li><a href="?page=1">처음</a></li>
+          <li><a href="?page={{ pagination.page -1 }}">이전</a></li>
+      {% endif %}
+      
+      {% for num in range(1,pagination.total_pages + 1) %}
+      {% if num ==pagination.page %}
+        <li class="active"><span>{{ num }}</span></li>
+      {% else %}
+      <li><a href="?page={{ num }}">{{ num }}</a></li>
+      {% endif %}
+      {% if pagination.page < pagination.total_pages %}
+          <li><a href="?page={{ pagination.page + 1 }}">다음</a></li>
+          <li><a href="?page={{ pagination.pages }}">마지막</a></li>
+          blockofcode
+      {% endif %}
+      
+      { endfor %}
+      
     </div>
   
 
