--- a/static/post.css
+++ b/static/post.css
@@ -14,6 +14,11 @@
     margin-bottom: 20px;
 }
 
+.btn-container{
+    display: flex;
+    justify-content: space-between;
+}
+
 .post-title {
     font-size: 24px;
     margin-bottom: 8px;
@@ -32,6 +37,34 @@
 .like-count {
     font-size: 14px;
     margin-bottom: 8px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn{
+    background-color: var(--accent-color); 
+    color: var(--normal-color); 
+    padding: 5px 5px; 
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block; 
+    font-size: 13px; 
+    margin: 0px 4px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px; 
+    transition: background-color 0.3s, box-shadow 0.3s;
+}
+.like_btn:hover {
+    background-color: var(--normal-color);
+    color: var(--accent-color);
+    box-shadow: 0 4px 8px 0 var(--accent-color);
+}
+
+.like_btn:active {
+    background-color: var(--accent-color);
+    box-shadow: 0 5px var(--accent-color);
+    transform: translateY(4px);
 }
 
 .comments {
