--- a/templates/write.html
+++ b/templates/write.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-  <script src="../static/write.js"></script>
   <div class="navbar">
     <div class="left">
       <ul>
@@ -49,10 +48,100 @@
     <a href="https://github.com/luna-negra/csi_group_project/tree/main" target="_blank">github</a>
     <a href="https://teamsparta.notion.site/1-CSI-6f9c97ddc53348598f701eb6f7796eb3" target="_blank">notion</a>
   </footer>
-
   <script src="{{ url_for('static', filename='simplemde.min.js') }}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script>
-    var mde = new SimpleMDE({ element: document.getElementById("content") });
+    
+    var mde = new SimpleMDE({
+      autofocus: true,
+      autosave: {
+        enabled: true,
+        uniqueId: "MyUniqueID",
+        delay: 1000,
+      },
+      blockStyles: {
+        bold: "__",
+        italic: "_"
+      },
+      element: document.getElementById("content"),
+      forceSync: true,
+      hideIcons: ["guide", "heading"],
+      indentWithTabs: false,
+      initialValue: "",
+      insertTexts: {
+        horizontalRule: ["", "\n\n-----\n\n"],
+        image: ["![](http://", ")"],
+        link: ["[", "](http://)"],
+        table: ["", "\n\n| Column 1 | Column 2 | Column 3 |\n| -------- | -------- | -------- |\n| Text     | Text      | Text     |\n\n"],
+      },
+      lineWrapping: false,
+      parsingConfig: {
+        allowAtxHeaderWithoutSpace: true,
+        strikethrough: false,
+        underscoresBreakWords: true,
+      },
+      placeholder: "내용을 입력하세요",
+      previewRender: function(plainText) {
+        return customMarkdownParser(plainText); // Returns HTML from a custom parser
+      },
+      previewRender: function(plainText, preview) { // Async method
+        setTimeout(function(){
+          preview.innerHTML = customMarkdownParser(plainText);
+        }, 250);
+
+        return "Loading...";
+      },
+      promptURLs: true,
+      renderingConfig: {
+        singleLineBreaks: false,
+        codeSyntaxHighlighting: true,
+      },
+      shortcuts: {
+        drawTable: "Cmd-Alt-T"
+      },
+      showIcons: ["code", "table"],
+      spellChecker: false,
+      status: false,
+      status: ["autosave", "lines", "words", "cursor"], // Optional usage
+      status: ["autosave", "lines", "words", "cursor", {
+        className: "keystrokes",
+        defaultValue: function(el) {
+          this.keystrokes = 0;
+          el.innerHTML = "0 Keystrokes";
+        },
+        onUpdate: function(el) {
+          el.innerHTML = ++this.keystrokes + " Keystrokes";
+        }
+      }], // Another optional usage, with a custom status bar item that counts keystrokes
+      styleSelectedText: false,
+      tabSize: 4,
+      toolbar: false,
+      toolbarTips: false,
+    });
+
+    document.addEventListener('DOMContentLoaded', function() {
+      var writeForm = document.querySelector('.form_container');
+      writeForm.addEventListener('submit', function(event) {
+        form_qualification(event);
+        var content = document.getElementById('content');
+        var html_text = marked.parse(mde.value());
+        replaced_text = html_text.replace(/\n/g, '<br>')
+        content.value = replaced_text
+      });
+    });
+    function form_qualification(event) {
+      var title = document.getElementById("title").value;
+      var content = document.getElementById("content").value;
+
+      var title_qualification = title.length == 0;
+      var content_qualification = content.length == 0;
+
+      if (title_qualification || content_qualification) {
+        if (title_qualification) { alert("제목을 입력해주세요"); }
+        if (content_qualification) { alert("내용을 입력해주세요"); }
+        event.preventDefault();
+      } 
+    }
   </script>
 </body>
 </html>
