UPDATE : 전 페이지 세션 추가
이제 모든 페이지에서 세션을 사용할 수 있습니다.
세션을 사용해서 My 드롭다운에 로그인/회원가입을 다르게 표시했습니다.
leaderboard는 에러가 나서 세션 추가를 못했습니다.

--- a/templates/post.html
+++ b/templates/post.html
@@ -26,7 +26,11 @@
             <li><a href="/my_page">내 정보</a></li>
             <li><a href="/til_list['user_id']">내 TIL</a></li>
             <li><a href="/write">글 작성</a></li>
+            {% if 'meminfo' in data['session'] %}
             <li><a href="/logout">로그아웃</a></li>
+            {% else %}
+            <li><a href="/login">로그인</a></li>
+            {% endif %}
           </ul>
         </li>
       </ul>
