--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
             <li><a href="/my_page">내 정보</a></li>
             <li><a href="/til_list['user_id']">내 TIL</a></li>
             <li><a href="/write">글 작성</a></li>
-            <li><a href="/logout">로그아웃</a></li>
+            <li><a href="/login">로그인</a></li>
           </ul>
         </li>
       </ul>
