--- a/templates/til_list.html
+++ b/templates/til_list.html
@@ -26,7 +26,11 @@
             <li><a href="/my_page">내 정보</a></li>
             <li><a href="/til_list['user_id']">내 TIL</a></li>
             <li><a href="/write">글 작성</a></li>
+            {% if 'meminfo' in data['session'] %}
             <li><a href="/logout">로그아웃</a></li>
+            {% else %}
+            <li><a href="/login">로그인</a></li>
+            {% endif %}
           </ul>
         </li>
       </ul>
