UPDATE : login.html 수정
login.html의 폰트와 안내 문구를 통일했습니다.

--- a/static/login.css
+++ b/static/login.css
@@ -78,7 +78,7 @@ input.loginInput{
 span{
   color: var(--btn-color);
   font-size: 20pt;
-  font-family: serif;
+  /* font-family: serif; */
   font-weight: 1000;
 }
 
