--- a/templates/login.html
+++ b/templates/login.html
@@ -61,7 +61,7 @@
       <hr>
       <div class="signUp">
         <form action="/register" method="GET">
-          <button type="submit" class="btnSignup"><span class="btnSignupText">Want to join us? Sign up</span></button>
+          <button type="submit" class="btnSignup"><span class="btnSignupText">계정이 없으신가요? 회원가입하기</span></button>
         </form>
       </div>
     </div>
